--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,29 @@
   <head>
     <title>My Resume</title>
     <style>
-
+      * {
+        font-family: arial;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 960px;
+      }
+      img {
+        width: 200px;
+        float: right;
+        margin-top: 0;
+      }
+      h2::after {
+        content: "";
+        display: block;
+        height: 3px;
+        background: grey;
+        top: 50%;
+      }
+      li {
+        line-height: 0;
+      }
     </style>
   </head>
 
